0.1.3

* Fix `SimulatorFlight` to include flight time.

0.1.2

* Expose lensy values.

0.1.1

* Move repository from `casr-61.345` to `casr-logbook`.

0.1.0

* More structure to a logbook.

0.0.12

* Fix exam output for HTML.

0.0.11

* Fix build to export `FlightEntry`.

0.0.10

* Add support for exams.

0.0.9

* Woops, left in test code.

0.0.8

* change amp to mdash in flight path.
* add id and links.

0.0.7

* HTML output printer.

0.0.6

* Fix bug in bambuser video type.

0.0.5

* Add bambuser video type.

0.0.4

* Add percentages to totals.

0.0.3

* Fix bug in merging two totals.

0.0.2

* Fix function name, `printMarkdown`.

0.0.1

* Initial release
* Initial data structures for a CASR 61.345 Pilot Personal Logbook.

  These data structures are open to change as more is understood about the necessity of logbooks.
  In particular, logging the particulars of IFR flights are currently not accounted for.