@@ -4,11 +4,13 @@
 module Data.Aviation.Casr.Logbook.Command(
   Command(..)
 , AsCommand(..)
+, getInstructingPic
 ) where
 
 import Control.Lens(makeClassyPrisms)
 import Data.Aviation.Casr.Logbook.Aviator(Aviator)
 import Data.Eq(Eq)
+import Data.Maybe(Maybe(Just, Nothing))
 import Data.Ord(Ord)
 import Prelude(Show)
 
@@ -19,3 +21,13 @@ data Command =
   deriving (Eq, Ord, Show)
 
 makeClassyPrisms ''Command
+
+getInstructingPic ::
+  Command
+  -> Maybe Aviator
+getInstructingPic (ICUS a) =
+  Just a
+getInstructingPic (Dual a) =
+  Just a
+getInstructingPic InCommand =
+  Nothing
